
CHANGES IN FLTK 1.3.1

	- Fixed fl_pie() drawing too small on X11 (STR #2703)
	- Fixed Fl_Menu issue with unusual menu flags (STR #2680)
	- Fixed Windows DLL import of fl_xid() (STR #2670)

CHANGES IN FLTK 1.3.0

	  New Features

	- Added UTF-8 Unicode support throughout FLTK and Fluid
	- Added Fl_Tree widget for hierarchical views
	- Added Fl_Table widget for widget layout
	- Added Fl_Native_Filechooser as a widget and global options
	- Added printing support (Fl_Printer class and friends) for native
	  printing on Windows and Mac OS X, PostScript printing on X11
	  with CUPS or lp, and PostScript file output on all platforms
	- Added basic Fl_Device abstraction layer for all drawing functions
	- Moved OS X code base to the more modern Cocoa toolkit thanks
	  to the awesome work of Manolo Gouy (STR #2221)

	  API and ABI compatibility to FLTK 1.1.x

	- All strings are expected to be in UTF-8 Unicode encoding
	- Replaced Fl_Scroll::position(int,int) with scroll_to(int,int)
	  to avoid overriding Fl_Widget::position(int,int) (STR #1303)
	- Although FLTK 1.3 maintains source code compatibility as good
	  as possible, the binary interface changed considerably.
	- Updated the bundled libpng to v1.5.1 (released Feb  3, 2011)
	- Updated the bundled libjpeg to v8c   (released Jan 16, 2011)
	- Updated the bundled zlib to v1.2.5   (released Apr 19, 2010)

	  API enhancements and changes

	- Changed font index to 32 bit
	- Changed font size to 32 bit
        - Changed widget coordinates to 32 bit
	- Corrected const methods of Fl_Text_{Buffer|Display|Selection}
	  to be declared const, corrected an Fl_Text_Buffer attrib. typo
	- All draw() methods of widgets are now protected (STR #2142).
	- Changed Fl_Group::clip_children() to public (STR #2017)
	- Changed socket library to winsock2 (ws2_32.dll) instead of 
	  wsock32.dll for Windows. The dll is now loaded dynamically only 
	  if/when needed.	  
	- Changed hide() and show() methods. They are now virtual from 
	  Fl_Widget.